--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage":"https://whuang602.github.io/Tic-Tac-Toe",
+  "homepage": "https://whuang602.github.io/Tic-Tac-Toe",
   "name": "project_t3",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
