--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://whuang602.github.io/Tic-Tac-Toe",
-  "name": "project_t3",
-  "version": "1.1.0",
+  "name": "tic-tac-toe",
+  "version": "1.1.2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
